Include missing `--add-exports` flags for Java 9+ Gradle builds
Previously, we didn't include the necessary `--add-exports` flags when
indexing Java 17 builds with Gradle that don't use toolchains. This
commit fixes that bug so we can correctly index repos like
airbytehq/airbyte.